k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-api
spec:
  selector:
    app: inventory-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: ClusterIP
